# makoto

./: .gitattributes  .gitignore  Caddyfile  Cargo.toml  Dockerfile  Dockerfile.go.libs  Dockerfile.ts.libs  Idea.md  Makefile  README.md  Taskfile.yaml  bun.lockb  docker-compose.yml  go.work  go.work.sum  package.json  tsconfig.json
.github/workflows/: docker-build.yml  f.auth.yml  f.home.yml  go.yml  rust.test.yml
.nginx/: nginx.conf
.nginx/ssl/: nginx-selfsigned.crt  nginx-selfsigned.key
apps/auth/: Cargo.toml  Dockerfile  Taskfile.yml  go.mod  go.sum
apps/auth/cmd/: main.go
apps/auth/internal/db/: db.go
apps/auth/internal/oauth2/: discord.go  endpoints.go  github.go  google.go  oauth2.go  oauth2_creator.go
apps/auth/internal/pipes/: json-caster.go  json-caster_test.go  token-caster.go  token-caster_test.go
apps/auth/internal/repository/: repos_test.go  token.go  user.go
apps/auth/internal/twirp/: README.md  impl.go  impl_test.go
apps/auth/internal/utils/: hasher.go  hasher_test.go  jwt.go  mailer.go  mailer_test.go
apps/auth/internal/utils/mail-templates/: confirm.html  templates.go
apps/auth/src/: main.rs
apps/auth/src/repository/: credentials.rs  mod.rs  oauth.rs  token.rs
apps/auth/src/service/: service.rs
apps/auth/src/utils/: hasher.rs  jwt.rs  mod.rs  validator.rs
apps/gateway/: Cargo.toml
apps/gateway/services/: authorization.go  go.mod  hashmap.go  user.go
apps/gateway/src/: main.rs
apps/gateway/src/service/: service.rs
apps/gateway/twirp/: Dockerfile  go.mod  go.sum  main.go
apps/gateway/twirp/internal/impl/: authorization.go  hashmap.go  user.go
apps/gateway/twirp/internal/middleware/: only_authorized.go  var.go  with_authorization.go  with_authorization_header.go  with_header_twirp_client.go
apps/hashmap/: Dockerfile  README.md  go.mod  go.sum
apps/hashmap/cmd/: main.go
apps/service-discovery/: Caddyfile  Cargo.toml  README.md  data.json  index.html  index.js
apps/service-discovery/src/: api.rs  lib.rs  main.rs
apps/service-discovery/src/api_com/: api_fetch.rs  mod.rs
apps/service-discovery/src/data/: data.rs
apps/service-discovery/src/node/: actions.rs  fabric.rs  mod.rs
apps/user/: Cargo.toml  build.rs
apps/user/src/: main.rs
apps/user/src/grpc/: handler.rs  mod.rs
apps/user/src/repository/: mod.rs  user_info.rs
backend/: .gitignore  Makefile  go.work  go.work.sum
backend/_config/: cfg.yaml  cfg.yml  config.example.yaml
backend/auth/: .gitignore  Dockerfile  Makefile  docker-compose.yml  go.mod  go.sum
backend/auth/cmd/: main.go
backend/auth/config/: config.go  local.config.example.yaml
backend/auth/db/: database.go
backend/auth/dto/: payload.go
backend/auth/grpc/: auth.pb.go  auth.proto  auth_grpc.pb.go
backend/auth/handler/: README.md  mutation.go  query.go  server.go  user.go
backend/auth/helpers/: errors.go
backend/auth/service/: credentials.go  tokens.go
backend/auth/tools/: hasher.go  hasher_test.go  jwt.go
backend/dict/: Dockerfile  Makefile  docker-compose.yml  go.mod  go.sum
backend/dict/cmd/: main.go
backend/dict/config/: config.go  local.config.yaml
backend/dict/db/: database.go
backend/dict/handler/: handler.go  server.go
backend/dict/logger/: logger.go
backend/dict/pipes/: cast_tag_type.go  cast_word_type.go
backend/dict/service/: tags.go  words.go
backend/distributor/: Dockerfile  Makefile  README.md  docker-compose.yml  go.mod  go.sum  gqlgen.yml
backend/distributor/cmd/: main.go
backend/distributor/config/: config.go
backend/distributor/graphql/: generated.go  resolver.go  (+1 more)
backend/graphql/: dict.graphql  schema.graphql
backend/grpc/: Makefile  go.mod
config/: config.example.yaml  config.go  config.ts  go.mod  package-lock.json  package.json  tsconfig.json
frontend/.config/: services-url.ts
frontend/auth/: .dockerignore  .eslintrc.cjs  .gitignore  Dockerfile  docker-compose.yml  houdini.config.js  package-lock.json  package.json  playwright.config.ts  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/dict/: houdini.config.js  package-lock.json  package.json  schema.graphql  svelte.config.js  tailwind.config.js  vite.config.ts
frontend/games/: .eslintrc.json  .prettierrc.json  bun.lockb  package-lock.json  package.json  tailwind.config.ts
frontend/hashmap/: .dockerignore  .prettierrc.json  Dockerfile  package-lock.json  package.json  playwright.config.ts  svelte.config.js  tsconfig.json  vite.config.ts
frontend/home/: .gitignore  .prettierrc.json  README.md  cypress.config.ts  nuxt.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.cypress.component.ts
frontend/main/: .dockerignore  .gitignore  .prettierrc.json  Dockerfile  Makefile  README.md  components.json  next.config.js  package.json
frontend/user/: tailwind.config.ts  tsconfig.json
libs/api/: package.json  tsconfig.json
libs/config/: Cargo.toml  config.go  config.ts  go.mod  package.json  tsconfig.json
libs/database/: Cargo.toml  db.go  go.mod  go.sum
libs/database/models/: hashmap_item.go  hashmap_tag.go  languages.go  user_data.go  user_info.go  user_privacy.go  user_token.go
libs/database/src/: lib.rs
libs/database/src/helpers/: const.rs  mod.rs  ops.rs
libs/database/src/models/: languages.rs  mod.rs  prelude.rs  user_infos.rs  users_languages.rs
libs/database/types/: enums.go
libs/db/: Cargo.toml  go.mod  go.sum
libs/grpc/: .gitignore  Cargo.toml  Makefile  README.md  bun.lockb  go.mod  go.sum  package.json  tsconfig.json
libs/lib/: Cargo.toml  go.mod  package.json  tsconfig.json
libs/lib/pkg/: benchmark.go
libs/lib/src/: cookies.ts  lib.rs  typed-fetch.ts
libs/lib/src/grpc/: utils.rs
libs/lib/src/nats/: mod.rs  parse.rs
libs/lib/src/wasm/: actions.rs  fetcher.rs  mod.rs  utils.rs
libs/log/: Cargo.toml  go.mod
libs/logger/: Cargo.toml  go.mod  logger.go
libs/middleware/: authorization.go  go.mod  middleware.go  with-authorization-header.go  with-authorization.go
libs/models/: go.mod  user_data.go  user_token.go
libs/utils/: Cargo.toml
tests/setupdb/: go.mod  main.go
(+328 files in other folders)
