[package]
name = "grpc_gateway"
version = "0.1.0"
authors = ["dehwyy <makoto.web3@gmail.com>"]
edition = "2021"

[dependencies]
tonic = "0.10.2"
prost = "0.12.3"
tonic-web = "0.10.2"
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread"] }

makoto_grpc = {path = "../../libs/grpc"}
makoto_lib = {path = "../../libs/utils"}
makoto_config = {path = "../../libs/config"}
makoto_logger = {path = "../../libs/log"}
