[package]
name = "service-discovery"
version = "0.1.0"
authors = ["dehwyy makoto.web3@gmail.com"]
edition = "2018"

[lib]
name = "wasm"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "service-discovery"
path = "src/main.rs"

[dependencies]
config = {path = "../../libs/config"}
logger = {path = "../../libs/logger"}
makoto = {path = "../../libs/lib"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.39"
futures = { version = "0.3.28", default-features = false, features = ["std"] }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
redis = {version = "0.23.3", features=["tokio-comp"]}
async-nats = {version = "0.33.0", features = ["service"]}
tokio = {version = "1.34.0", features = ["macros", "rt-multi-thread"]}

[dependencies.web-sys]
version = "0.3.66"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'MouseEvent',
  'Window',
]

[profile.release]
opt-level = "s"
