[package]
name = "service-discovery"
version = "0.1.0"
authors = ["dehwyy makoto.web3@gmail.com"]
edition = "2018"

[lib]
name = "wasm"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "service-discovery"
path = "src/main.rs"

[[bin]]
name = "service-discovery-api"
path = "src/api.rs"

[dev-dependencies]
wasm-bindgen-futures = "0.4.39"
wasm-bindgen = "0.2.84"

[dependencies]
makoto = {path = "../../libs/lib"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.39"
wasm-bindgen = "0.2.84"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
config = {path = "../../libs/config"}
futures = { version = "0.3.28", default-features = false, features = ["std"] }
logger = {path = "../../libs/logger"}
redis = {version = "0.24.0", features=["tokio-comp", "streams"]}
async-nats = {version = "0.33.0", features = ["service"]}
tokio = {version = "1.34.0", features = ["macros", "rt-multi-thread"]}
chrono = "0.4.31"
axum = {version = "0.7.1"}
tower-http = {version = "0.5.0", features = ["cors"]}

[dependencies.web-sys]
version = "0.3.66"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'MouseEvent',
  'Window',
]

[profile.release]
opt-level = "s"
