[package]
name = "user"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12.1"
tonic = "0.10.2"
tokio = {version = "1.34.0", features = ["macros", "rt-multi-thread"]}
sea-orm = { version = "0.12.4", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "with-uuid", "with-time" ] }
database = {path = "../../libs/database"}
config = {path = "../../libs/config"}
logger = {path = "../../libs/logger"}


[build-dependencies]
tonic-build = "0.10.2"
